<resources>
    <string name="app_name">Stuck</string>
    <string name="action_settings">Settings</string>
    <string name="post_type_question">What kind of post do you want to make?</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="anonymous">Anonymous</string>
    <string name="anonymousLower">anonymous</string>
    <string name="draft">Draft</string>

    <string-array name="gender_array">
        <item>Select</item>
        <item>Ignore</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="age_group_array">
        <item>Select</item>
        <item>Ignore</item>
        <item>&gt;18</item>
        <item>18–25</item>
        <item>26–30</item>
        <item>31–40</item>
        <item>41–50</item>
        <item>51–60</item>
        <item>61+</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_create">Create</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_me">Me</string>
</resources>
