<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeListFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_blue_400_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/categoriesFragment"
        android:title="@string/menu_categories"
        android:icon="@drawable/ic_subject_blue_400_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/newPostTypeFragment"
        android:title="@string/menu_create"
        android:icon="@drawable/ic_create_blue_400_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/favoritesListFragment"
        android:title="@string/menu_favorites"
        android:icon="@drawable/ic_star_blue_400_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

    <item android:id="@+id/userPostsListFragment"
        android:title="@string/menu_me"
        android:icon="@drawable/ic_person_blue_400_24dp"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
</menu>